--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: ny_taxi
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - ny_taxi_postgres_data:/var/lib/postgresql
     depends_on:
@@ -27,7 +27,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
-      - "8085:80"
+      - '8085:80'
     depends_on:
       pgdatabase:
         condition: service_started
@@ -41,7 +41,7 @@ services:
       POSTGRES_USER: kestra
       POSTGRES_PASSWORD: k3str4
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+      test: ['CMD-SHELL', 'pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}']
       interval: 30s
       timeout: 10s
       retries: 10
@@ -53,7 +53,7 @@ services:
     # Note that this setup with a root user is intended for development purpose.
     # Our base image runs without root, but the Docker Compose implementation needs root to access the Docker socket
     # To run Kestra in a rootless mode in production, see: https://kestra.io/docs/installation/podman-compose
-    user: "root"
+    user: 'root'
     command: server standalone
     volumes:
       - kestra_data:/app/storage
@@ -91,10 +91,8 @@ services:
               path: /tmp/kestra-wd/tmp
           url: http://localhost:8080/
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - '8080:8080'
+      - '8081:8081'
     depends_on:
       kestra_postgres:
         condition: service_started
-    
-    
