--- a/docker-compose-oracle.yaml
+++ b/docker-compose-oracle.yaml
@@ -29,6 +29,7 @@ services:
     command: server standalone
     volumes:
       - kestra-data:/app/storage
+      - /app/certs:/app/certs
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
       # Mount service account JSON so GCS storage can use GOOGLE_APPLICATION_CREDENTIALS
